Minor styling correction to Dark Mode Page

--- a/src/pages/ButtonPage/ButtonPage.scss
+++ b/src/pages/ButtonPage/ButtonPage.scss
@@ -21,7 +21,7 @@
 
 @media (min-width: 1200px) {
   .button-container {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
